--- a/docs/stat565/lab6_stat565.tex
+++ b/docs/stat565/lab6_stat565.tex
@@ -823,27 +823,327 @@ The Scheffe methods indicates the difference in y between varieties 4
 applied method a and varieties 5 applied method c are significant
 (P-value=0.0326).
 
-\begin{longtable}[]{@{}l@{}}
+\begin{longtable}[]{@{}crcrlll@{}}
 \toprule
+\begin{minipage}[b]{0.16\columnwidth}\centering
+contrast\strut
+\end{minipage} & \begin{minipage}[b]{0.11\columnwidth}\raggedleft
+estimate\strut
+\end{minipage} & \begin{minipage}[b]{0.07\columnwidth}\centering
+SE\strut
+\end{minipage} & \begin{minipage}[b]{0.04\columnwidth}\raggedleft
+df\strut
+\end{minipage} & \begin{minipage}[b]{0.09\columnwidth}\raggedright
+t.ratio\strut
+\end{minipage} & \begin{minipage}[b]{0.09\columnwidth}\raggedright
+p.value\strut
+\end{minipage} & \begin{minipage}[b]{0.13\columnwidth}\raggedright
+P.adj\strut
+\end{minipage}\tabularnewline
+\midrule
 \endhead
-contrast estimate SE df t.ratio p.value P.adj\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+c: v2-v5\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+73.667\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+2.878\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0404\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v1: a-b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+66.8\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+2.611\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0290\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v2: a-b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+66.2\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+2.585\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0310\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v3: a-b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+76.8\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.002\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0101\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+Tukey\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4: a-b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+124.7\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.871\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+\textless{}.0001\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+0.0002\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4: a-c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+111.3\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.350\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0001\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+0.0016\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v5: a-c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+97.8\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.823\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0008\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+0.0096\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v5: b-c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+66.7\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+2.605\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0295\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v1,a-v5,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+92.167\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.601\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0383\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v2,a-v5,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+93.000\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.634\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0349\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v3,a-v4,b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+96.333\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.764\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0238\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v3,a-v5,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+105.833\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.135\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0074\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v1,b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+108.833\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.252\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0050\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v2,b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+107.333\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.194\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0061\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v3,b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+105.167\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.109\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0080\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v4,b\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+124.667\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.871\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0006\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v4,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+111.333\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+4.350\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0036\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+Scheffe\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v4,a-v5,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+134.167\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+5.242\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0001\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+0.0326\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\centering
+v5,a-v5,c\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedleft
+97.833\strut
+\end{minipage} & \begin{minipage}[t]{0.07\columnwidth}\centering
+25.6\strut
+\end{minipage} & \begin{minipage}[t]{0.04\columnwidth}\raggedleft
+75\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+3.823\strut
+\end{minipage} & \begin{minipage}[t]{0.09\columnwidth}\raggedright
+0.0199\strut
+\end{minipage} & \begin{minipage}[t]{0.13\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
-
-c: v2 - v5 73.667 25.6 75 2.878 0.0404 v1: a - b 66.8 25.6 75 2.611
-0.0290 v2: a - b 66.2 25.6 75 2.585 0.0310 v3: a - b 76.8 25.6 75 3.002
-0.0101 Tukey v4: a - b 124.7 25.6 75 4.871 \textless{}.0001 0.0002 v4: a
-- c 111.3 25.6 75 4.350 0.0001 0.0016 v5: a - c 97.8 25.6 75 3.823
-0.0008 0.0096 v5: b - c 66.7 25.6 75 2.605 0.0295
-------------------------------------------------------------- v1,a -
-v5,c 92.167 25.6 75 3.601 0.0383 v2,a - v5,c 93.000 25.6 75 3.634 0.0349
-v3,a - v4,b 96.333 25.6 75 3.764 0.0238 v3,a - v5,c 105.833 25.6 75
-4.135 0.0074 v4,a - v1,b 108.833 25.6 75 4.252 0.0050 v4,a - v2,b
-107.333 25.6 75 4.194 0.0061 v4,a - v3,b 105.167 25.6 75 4.109 0.0080
-v4,a - v4,b 124.667 25.6 75 4.871 0.0006 v4,a - v4,c 111.333 25.6 75
-4.350 0.0036 Scheffe v4,a - v5,c 134.167 25.6 75 5.242 0.0001 0.0326
-v5,a - v5,c 97.833 25.6 75 3.823 0.0199
--------------------------------------------------------------
 
 (e).
 \textcolor[rgb]{0.5,0.5,0.5}{Provide the plots of residuals here. Do not report code here.}
@@ -925,6 +1225,21 @@ adjustment give the same results (P-calue=1.0000, 0.9694, respectively).
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\NormalTok{table_grass <-}\StringTok{ }\KeywordTok{read_excel}\NormalTok{(}\StringTok{"Grass.xlsx"}\NormalTok{)}
+\NormalTok{table_grass}\OperatorTok{$}\NormalTok{m <-}\StringTok{ }\KeywordTok{as.factor}\NormalTok{(table_grass}\OperatorTok{$}\NormalTok{method)}
+\NormalTok{table_grass}\OperatorTok{$}\NormalTok{v <-}\StringTok{ }\KeywordTok{factor}\NormalTok{(table_grass}\OperatorTok{$}\NormalTok{variety, }\DataTypeTok{levels =} \KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{, }\DecValTok{2}\NormalTok{, }\DecValTok{3}\NormalTok{, }\DecValTok{4}\NormalTok{, }\DecValTok{5}\NormalTok{), }\DataTypeTok{labels =} \KeywordTok{c}\NormalTok{(}\StringTok{"v1"}\NormalTok{, }
+    \StringTok{"v2"}\NormalTok{, }\StringTok{"v3"}\NormalTok{, }\StringTok{"v4"}\NormalTok{, }\StringTok{"v5"}\NormalTok{))}
+\NormalTok{table_grass}\OperatorTok{$}\NormalTok{mv <-}\StringTok{ }\KeywordTok{interaction}\NormalTok{(table_grass}\OperatorTok{$}\NormalTok{m, table_grass}\OperatorTok{$}\NormalTok{v)}
+\NormalTok{model_grass <-}\StringTok{ }\KeywordTok{aov}\NormalTok{(y }\OperatorTok{~}\StringTok{ }\NormalTok{m }\OperatorTok{*}\StringTok{ }\NormalTok{v, }\DataTypeTok{data =}\NormalTok{ table_grass)}
+\NormalTok{model_grass_inter <-}\StringTok{ }\KeywordTok{aov}\NormalTok{(y }\OperatorTok{~}\StringTok{ }\NormalTok{mv, }\DataTypeTok{data =}\NormalTok{ table_grass)}
+\KeywordTok{str}\NormalTok{(table_grass)}
+\KeywordTok{ggline}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ table_grass, }\DataTypeTok{x =} \StringTok{"variety"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"y"}\NormalTok{, }\DataTypeTok{add =} \KeywordTok{c}\NormalTok{(}\StringTok{"mean"}\NormalTok{, }\StringTok{"jitter"}\NormalTok{), }
+    \DataTypeTok{shape =} \StringTok{"method"}\NormalTok{, }\DataTypeTok{color =} \StringTok{"method"}\NormalTok{, }\DataTypeTok{linetype =} \StringTok{"method"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"y"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"variety of table_grass"}\NormalTok{)}
+\KeywordTok{pander}\NormalTok{(}\KeywordTok{favstats}\NormalTok{(y }\OperatorTok{~}\StringTok{ }\NormalTok{method, }\DataTypeTok{data =}\NormalTok{ table_grass))}
+\KeywordTok{pander}\NormalTok{(}\KeywordTok{favstats}\NormalTok{(y }\OperatorTok{~}\StringTok{ }\NormalTok{method }\OperatorTok{|}\StringTok{ }\NormalTok{variety, }\DataTypeTok{data =}\NormalTok{ table_grass))}
+\KeywordTok{summary}\NormalTok{(model_grass)}
+\KeywordTok{plot}\NormalTok{(model_grass, }\DataTypeTok{pch =} \DecValTok{16}\NormalTok{)}
+
 \CommentTok{# Test simple effects # Method-1# 1.1 Multiple comparison of levels in}
 \CommentTok{# variety factor for a given level of method factor #}
 \NormalTok{v_m <-}\StringTok{ }\KeywordTok{pairs}\NormalTok{(}\KeywordTok{lsmeans}\NormalTok{(}\DataTypeTok{object =}\NormalTok{ model_grass, }\DataTypeTok{specs =} \OperatorTok{~}\NormalTok{v }\OperatorTok{|}\StringTok{ }\NormalTok{m))}
